aplicado layout de alta fidelidad

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 * { 
   /* color: var(--font-color); */
-  border-color: transparent !important;
+  /* border-color: transparent !important; */
 }
 
 header {
