--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --font-color: #212427;
   --primary: #8884FF;
   --secondary: #003844;
-  --highlight: #006C67: 
+  --highlight: #006C67; 
 }
 
 * {
