--- a/src/index.css
+++ b/src/index.css
@@ -115,11 +115,38 @@ footer {
 
 .productsSwiper {
   position: initial;
-  min-height: 550px;
+  min-height: 475px;
 }
 .productsSwiper .swiper-button-prev {
   left: -10px;
 }
 .productsSwiper .swiper-button-next {
   right: -10px;
+}
+
+@media(max-width: 767px) {
+  header {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  header.scroll {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  
+  .bannerSwiper .swiper-button-prev,
+  .bannerSwiper .swiper-button-next {
+    display: none;
+  }
+
+  .bannerSwiper .swiper-pagination {
+    bottom: -5px;
+  }
+
+  .bannerSwiper .swiper-pagination-bullet {
+    width: 15px;
+    height: 15px;
+    border-width: 4px !important;
+  }
+  
 }
