--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ header {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   padding-top: 32px;
   padding-bottom: 32px;
-  transition: all .25s ease-in-out;
+  transition: all .5s ease-in-out;
   position: relative;
   z-index: 2;
 }
@@ -43,10 +43,14 @@ header.scroll {
   background-color: rgba(136, 132, 255, .5);
 }
 header .logo {
-  transition: width .15s ease-in-out;
+  transition: width .35s ease-in-out;
 }
 header.scroll .logo {
   width: 140px;
+}
+
+.page.scroll {
+  padding-top: 100px;
 }
 
 footer {
@@ -130,6 +134,20 @@ footer {
 }
 .productsSwiper .swiper-button-next {
   right: -10px;
+}
+
+.footerLink:hover{
+  text-decoration: none !important;
+}
+.footerLink::after {
+  display:block;
+  content: "";
+  border-bottom: solid 2px #fff;  
+  transform: scaleX(0);  
+  transition: transform 250ms ease-in-out;
+}
+.footerLink:hover::after {
+  transform: scaleX(1) 
 }
 
 @media(max-width: 767px) {
