Finish Product Page mockup

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
 * {
   font-family: 'Gabarito', sans-serif !important;
-  border-color: transparent !important;
+  /* border-color: transparent !important; */
 }
 
 header {
