implamentacion product manager

--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,60 @@ footer {
   }
   
 }
+
+.css-vdxpmq {
+  font-family: var(--chakra-fonts-body);
+  margin-top: var(--chakra-space-5);
+  padding: var(--chakra-space-3);
+  border-width: 1px;
+  border-radius: 12px;
+  overflow-x: auto;
+  z-index: 1;
+}
+
+.css-fmhgzt{
+  text-transform: none !important;
+  font-size: 14px !important;
+  font-weight: lighter !important;
+}
+
+.css-1r4lnxj{
+  text-transform: none !important;
+  font-size: 14px !important;
+  font-weight: lighter !important;
+}
+
+.title_admin{
+  padding-top: 20px;
+}
+
+.table_ml_header{
+  background-color:#9F9DFF;
+  
+  height: 50px;
+  
+}
+
+.css-r10se1{
+  color: #003844 !important;
+  font-size: 14px !important;
+}
+
+.css-1lno716{
+  text-transform: none !important;
+  font-size: 14px !important;
+  font-weight: lighter !important;
+  background-color:#9F9DFF !important;
+}
+
+.css-7nf1q4{
+  border-color: #003844 !important;
+}
+
+.chakra-textarea{
+  border-color: #003844 !important;
+}
+
+.chakra-select{
+  border-color: #003844 !important;
+}
