form register book in progress

--- a/src/index.css
+++ b/src/index.css
@@ -204,9 +204,10 @@ footer {
   background-color:#9F9DFF !important;
 }
 
-.css-7nf1q4{
+.chakra-input{
   border-color: #003844 !important;
 }
+
 
 .chakra-textarea{
   border-color: #003844 !important;
