formulario en progreso, falta la funcion del submit

--- a/src/index.css
+++ b/src/index.css
@@ -216,3 +216,6 @@ footer {
 .chakra-select{
   border-color: #003844 !important;
 }
+.chakra-numberinput__field{
+  border-color: #003844 !important;
+}
