--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
   /* border-color: transparent !important; */
 }
 
+.content {
+  min-height: calc(100vh - 205px);
+}
+
 .header-index {
   background-color: rgba(136, 132, 255, 0.8);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
